deploy: f78343f9d90c619c10f946ac9df6f3e8644722c6

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>MyProject</title>
-  <base href="/">
+  <base href="https://nikaklokava.github.io/Hospital-Portal/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@font-face{font-family:Domine;src:url(Domine-VariableFont_wght.8f9c520ece2fb140.ttf) format("truetype");font-weight:400;font-style:normal}html{scroll-behavior:smooth}body{box-sizing:border-box;font-family:Domine,sans-serif}body{margin:0;color:#353c3f}</style><link rel="stylesheet" href="https://nikaklokava.github.io/Hospital-Portal/styles.a587d4df25853a3e.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="https://nikaklokava.github.io/Hospital-Portal/styles.a587d4df25853a3e.css"></noscript></head>
+<style>@font-face{font-family:Domine;src:url(Domine-VariableFont_wght.8f9c520ece2fb140.ttf) format("truetype");font-weight:400;font-style:normal}html{scroll-behavior:smooth}body{box-sizing:border-box;font-family:Domine,sans-serif}body{margin:0;color:#353c3f}</style><link rel="stylesheet" href="styles.a587d4df25853a3e.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a587d4df25853a3e.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="https://nikaklokava.github.io/Hospital-Portal/runtime.f51f2ceb319999f5.js" type="module"></script><script src="https://nikaklokava.github.io/Hospital-Portal/polyfills.b1a75d55c3eaa8b1.js" type="module"></script><script src="https://nikaklokava.github.io/Hospital-Portal/main.8be329bc1f6bf330.js" type="module"></script>
+<script src="runtime.837cf8cf0801b00c.js" type="module"></script><script src="polyfills.b1a75d55c3eaa8b1.js" type="module"></script><script src="main.0e14826b3c374ed6.js" type="module"></script>
 
 </body></html>
