deploy: b2a7308585ca6deebbb61d5414c1b30b1c7a0145

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base href="https://nikaklokava.github.io/Hospital-Portal/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@font-face{font-family:Domine;src:url(Domine-VariableFont_wght.8f9c520ece2fb140.ttf) format("truetype");font-weight:400;font-style:normal}html{scroll-behavior:smooth}body{box-sizing:border-box;font-family:Domine,sans-serif}body{margin:0;color:#353c3f}</style><link rel="stylesheet" href="styles.a587d4df25853a3e.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a587d4df25853a3e.css"></noscript></head>
+<style>@font-face{font-family:Domine;src:url(https://fonts.gstatic.com/s/domine/v23/L0x8DFMnlVwD4h3htfqndSk.woff2) format("woff2");font-weight:400;font-style:normal}html{scroll-behavior:smooth}body{box-sizing:border-box;font-family:Domine,sans-serif}body{margin:0;color:#353c3f}</style><link rel="stylesheet" href="styles.5ca97ea1431a65c0.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5ca97ea1431a65c0.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.837cf8cf0801b00c.js" type="module"></script><script src="polyfills.b1a75d55c3eaa8b1.js" type="module"></script><script src="main.0e14826b3c374ed6.js" type="module"></script>
+<script src="runtime.edc2573b3d4055d3.js" type="module"></script><script src="polyfills.b1a75d55c3eaa8b1.js" type="module"></script><script src="main.9064d1ae3873c3ca.js" type="module"></script>
 
 </body></html>
